# xdr-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
rpcgen/: Cargo.toml
rpcgen/src/: error.rs  gen.rs  gen_code.rs  keyword.rs  lib.rs  main.rs  parser.rs
serde-xdr/: Cargo.toml
serde-xdr-derive/: Cargo.toml
serde-xdr-derive/src/: lib.rs
serde-xdr-test/: Cargo.toml
serde-xdr-test/src/: lib.rs
serde-xdr/src/: de.rs  error.rs  lib.rs  opaque.rs  primitive.rs  ser.rs
