[workspace]
resolver = "3"
members = [
  "rpcgen",
  "serde-xdr",
  "serde-xdr-derive",
  "serde-xdr-test",
]

[workspace.package]
version = "0.5.0"
authors = ["9506hqwy"]
edition = "2024"
rust-version = "1.85"
repository = "https://github.com/9506hqwy/xdr-rs"
license = "MIT OR Apache-2.0"

[profile.release]
strip = "symbols"
lto = true
