[package]
name = "rpcgen"
version = "0.4.0"
authors = ["9506hqwy"]
edition = "2021"
rust-version = "1.60"
repository = "https://github.com/9506hqwy/xdr-rs"
license = "MIT OR Apache-2.0"
keywords = ["xdr", "rfc4506"]
categories = ["development-tools"]

[dependencies]
clap = "3.1.18"
nom = "7.1.1"
proc-macro2 = "1.0.37"
quote = "1.0.18"
