[package]
name = "rpcgen"
keywords = ["xdr", "rfc4506"]
categories = ["development-tools"]

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
clap = "4.3.19"
nom = "7.1.1"
proc-macro2 = "1.0.37"
quote = "1.0.18"
