[package]
name = "serde_xdr_derive"
version = "0.3.0"
authors = ["9506hqwy"]
edition = "2021"
rust-version = "1.60"
repository = "https://github.com/9506hqwy/xdr-rs"
license = "MIT OR Apache-2.0"
keywords = ["xdr", "rfc4506"]
categories = ["encoding"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0.18"
syn = { version = "1.0.95", features = ["full"] }
