[package]
name = "serde_xdr_derive"
keywords = ["xdr", "rfc4506"]
categories = ["encoding"]

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
quote = "1.0.18"
syn = { version = "2.0.27", features = ["full"] }
