[package]
name = "serde_xdr_test"
keywords = ["xdr", "rfc4506"]
categories = ["development-tools::testing"]

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dev-dependencies]
serde = { version="1.0.137", features=["derive"] }
serde_xdr = { path="../serde-xdr" }
serde_xdr_derive = { path="../serde-xdr-derive" }
