[package]
name = "serde_xdr"
keywords = ["xdr", "rfc4506"]
categories = ["encoding"]

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
serde = { version="1.0.137", features=["derive"] }
